# PDFZen

./: .gitignore  README.md  convert_logo.py  create_desktop_shortcut.ps1  index.html  main.py  package-lock.json  package.json  pyproject.toml  server.py  setup.bat  setup.ps1  start.bat  vite.config.js
backend/: __init__.py  converters.py  libreoffice.py  process_executor.py  runtime_paths.py
scratch/: convert_pdf.py  inspect_pdf.py
scripts/: convert_logo.py  create_desktop_shortcut.ps1  start-ollama-vulkan.ps1  start-pdfzen.ps1
scripts/dev/: README.md  convert_pdf.py  inspect_pdf.py  split_tools.py
src/: main.js  pdfjs-setup.js  style.css  utils.js
src/lib/: camera-registry.js  tool-lifecycle.js  utils.js
src/tools/: ai.js  compress.js  convert.js  edit.js  logo-base64.js  merge.js  organize.js  security.js  split.js
src/tools/ai/: compare.js  forms.js  index.js  ocr.js  scan.js  shared.js  summarizer.js  translate.js
src/tools/convert/: convert-shared.js  excel-to-pdf.js  html-to-pdf.js  jpg-to-pdf.js  pdf-to-excel.js  pdf-to-jpg.js  pdf-to-markdown.js  pdf-to-powerpoint.js  pdf-to-word.js  powerpoint-to-pdf.js  word-to-pdf.js
src/tools/edit/: edit-pdf.js  index.js  shared.js  sign.js
src/tools/organize/: crop.js  index.js  organize.js  page-numbers.js  rotate.js  shared.js  watermark.js
src/tools/security/: index.js  pdf-a.js  protect.js  redact.js  repair.js  shared.js  unlock.js
tests/: test_converters.py  test_safety.py  test_server.py
