[project]
name = "multi-tool"
version = "0.1.0"
description = "PDFZen — local hybrid PDF utility (Vite frontend + FastAPI conversion backend)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pdf2docx>=0.5.13",
    "pdfplumber>=0.11.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.19",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

